fix that hovering items close to the bottom made a scrollbar appear

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -212,6 +212,7 @@ samp {
   position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 
   // todo move these ones into their files
   .login-screen {
